examples/test/testpolicy15113.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15113
  namespace: namespace100
spec:
  podSelector:
    matchLabels:
      key9: value15
      key4: value37
      key27: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value31
          key10: value32
          key9: value20
      podSelector:
        matchLabels:
          key28: value4
